--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,49 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@tailwind utilities;
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+@theme {
+  /* font and bg */
+  --color-background: oklch(14.5% 0 0);
+  --color-foreground: oklch(97% 0 0);
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  /* muted color debatable, idk if it needs less lightness */
+  --color-muted: oklch(55.6% 0 0);
+
+  /* card colors */
+  --color-base-100: oklch(37.1% 0 0);
+  --color-base-200: oklch(26.9% 0 0);
+  --color-base-300: oklch(20.5% 0 0);
+
+  --color-primary: oklch(58.6% 0.253 17.585);
+
+  --color-warning: oklch(70.5% 0.213 47.604);
+  --color-error: oklch(57.7% 0.245 27.325);
+  --color-success: oklch(76.8% 0.233 130.85);
+  --color-info: oklch(71.5% 0.143 215.221);
+
+  --font-header: var(--font-montserrat);
+  --font-body: var(--font-geist);
+
+  --breakpoint-sm: 40rem;
+  --breakpoint-md: 48rem;
+  --breakpoint-lg: 64rem;
+  --breakpoint-xl: 64rem;
+  --breakpoint-2xl: 64rem;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-body);
+}
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--font-header);
+  font-weight: 600;
+}
+
+*::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
+}
+* {
+  -ms-overflow-style: none;  /* IE/Edge */
+  scrollbar-width: none;     /* Firefox */
 }
